--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/comments/portlet-comments.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/comments/portlet-comments.tml
@@ -148,7 +148,7 @@
 					/>
 					
 					<script>
-						require(["jquery", "jquery-textarea-autogrow"], function(){
+						require(["jquery", "jquery-textarea-autogrow"], function($){
 							$("#module-<tml:option name="ns"/> textarea").autogrow()
 						})						
 					</script>
