--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/download-list/portlet-dragdrop.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/download-list/portlet-dragdrop.tml
@@ -24,7 +24,7 @@
 </tml:script>
 
 <script>
-	require(["jquery", "jquery-wga-drophandler"], function(){
+	require(["jquery", "jquery-wga-drophandler"], function($){
 		$(function(){
 		
 			function onFilesDrop(data){
