--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/html5media/portlet-dragdrop-audio.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/html5media/portlet-dragdrop-audio.tml
@@ -29,7 +29,7 @@
 </tml:script>
 
 <script>
-	require(["jquery", "jquery-wga-drophandler"], function(){
+	require(["jquery", "jquery-wga-drophandler"], function($){
 		$(function(){
 			
 			var BI = window.parent.BI
