--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/html5media/video.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/html5media/video.tml
@@ -93,7 +93,7 @@
 </video>
 
 <script>
-	require(["jquery"], function(){
+	require(["jquery"], function($){
 		$("#module-<tml:option name="ns"/> source").each(function(index, el){
 			el.src = el.src.split(";").slice(0)[0];
 		})
