--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/image/dragdrop.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/image/dragdrop.tml
@@ -63,7 +63,7 @@
 </tml:script>
 
 <script>
-	require(["jquery", "jquery-wga-drophandler"], function(){
+	require(["jquery", "jquery-wga-drophandler"], function($){
 	
 		$(function(){
 		
