--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/overlay/render.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/overlay/render.tml
@@ -57,7 +57,7 @@
 	
 </div>
 <script>
-	require(["jquery", "jquery-modal"], function(){
+	require(["jquery", "jquery-modal"], function($){
 		
 		$(document).off('click.<tml:option name="ns"/> modal-shown.<tml:option name="ns"/> modal-closed.<tml:option name="ns"/>')
 		
