--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/search/searchresult/portlet.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/search/searchresult/portlet.tml
@@ -78,7 +78,7 @@
 							info.setClassID("Search for: " + tmlform.query);
 					</tml:script>
 					<script>
-						require(["jquery"], function(){
+						require(["jquery"], function($){
 							$(function(){
 								var el = document.forms['searchresult-query-form'].elements['query'];
 								el.focus();
