--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/vote/portlet/mode-vote.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/vote/portlet/mode-vote.tml
@@ -53,7 +53,7 @@
 </div>
 
 <script>
-	require(["jquery"], function(){
+	require(["jquery"], function($){
 		
 		$("#module-<tml:option name="ns"/> .voting_bar_vote li").on({
 			"mouseover": function(){
