--- a/OpenWGA/plugins/cm-modules/design/tml/javascripts/include.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/javascripts/include.tml
@@ -30,7 +30,7 @@
 if(typeof(require)==="undefined"){
 	// create dummy require():
 	window.require = function(deps, callback){
-		callback();
+		callback(window.jQuery);
 	}
 }
 
