--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/html5media/render-html5-audio.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/html5media/render-html5-audio.tml
@@ -64,7 +64,7 @@
 </div>
 
 <script>
-	require(["jquery"], function(){
+	require(["jquery"], function($){
 		$("#module-<tml:option name="ns"/> source").each(function(index, el){
 			el.src = el.src.split(";").slice(0)[0];
 		})
