--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/image-wall/render.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/image-wall/render.tml
@@ -87,11 +87,11 @@
 </div>
 
 <tml:[script]>
-	require(["jquery", "<tml:url type="tml" name="image-wall" medium="javascripts" u_noext=""/>"], function(){
+	require(["jquery", "<tml:url type="tml" name="image-wall" medium="javascripts" u_noext=""/>"], function($){
 		$("#album-<tml:option name="ns"/>").imageAlbum();
 	});
 	<tml:case condition="CMM.setting('lightbox')">
-		require(["jquery-lightbox"], function(){
+		require(["jquery", "jquery-lightbox"], function($){
 			$(function(){
 				$("#album-<tml:option name="ns"/>").find("img").lightbox({
 					group: "<tml:option name="ns"/>",
