--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/search/render.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/search/render.tml
@@ -63,7 +63,7 @@
 </div>
 
 <script>
-	require(["jquery"], function(){
+	require(["jquery"], function($){
 		<tml:include ref="::js"/>
 	})
 </script>
