Updated content modules scripts to correctly use jquery's $ as parameter

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/form/portlet-form.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/form/portlet-form.tml
@@ -191,6 +191,7 @@
 			
 			<tml:[script]>
 				require([
+					"jquery",
 					"jquery-ui-js/datepicker",
 					<tml:case condition="LANGUAGE!='en'">
 						<tml:script>
@@ -202,7 +203,7 @@
 					</tml:case> 
 					"css!jquery-ui-css",
 					"jquery-textarea-autogrow"
-				], function(picker, config){
+				], function($, picker, config){
 					if(picker){
 						config && picker.setDefaults(config);
 						picker.setDefaults({							
