Field "replacementreason" stored in content / mod [form-field] option "store" not evaluated correctly

--- a/OpenWGA/plugins/cm-neo/design/tml/html/form-field.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/form-field.tml
@@ -26,8 +26,8 @@
 				optionsitem=		"{option('optionsitem') || ($option_optionvalues ? '$option_optionvalues' : VOID)}"
 				optgroupsitem=		"{option('optgroupsitem') || ($option_optgroups ? '$option_optgroups' : VOID)}"
 				optionstitle=		"{option('optionstitle')==null ? VOID : option('optionstitle')}"
-				meta=				"{option('meta')||'false'}"
-				store=				"{option('store')||(_mode=='edit'?'true':'false')}"
+				meta=				"{option('meta')==null ? VOID : option('meta')}"
+				store=				"{option('store')==null ? VOID : option('store')}"
 				default=			"{option('default')==null ? VOID : option('default')}"
 				defaultexpression=	"{option('defaultexpression')==null ? VOID : option('defaultexpression')}"
 				validation=			"{option('validation')==null ? VOID : option('validation')}"
