--- a/OpenWGA/plugins/cm-neo/design/tml/html/sidebar/editor-tool-panels/rtf.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/sidebar/editor-tool-panels/rtf.tml
@@ -1,24 +1,10 @@
 <fieldset style="margin-top:0">
 	<legend>Absatz</legend>
 
-	<div>
-		<select name="para" style="width:100%">
-			<option value="">Kein Absatz
-			<option data-role="divider"></option>
-			<option value="pre">PRE
-			<option value="p">Normaler Absatz
-			<option data-role="divider"></option>
-			<option value="h1">Überschrift 1
-			<option value="h2">Überschrift 2
-			<option value="h3">Überschrift 3
-			<option value="h4">Überschrift 4
-			<option value="h5">Überschrift 5
-			<option value="h6">Überschrift 6
-		</select> 
-	</div>
-	
+	<div id="para-select"></div>
+
 	<div style="margin-top:10px">
-		<select name="text-style" style="width:100%" multiple="multiple"></select> 
+		<div id="text-style-ms"></div>
 	</div>
 	
 </fieldset>
@@ -78,7 +64,7 @@
 	</div>
 	<div style="margin:10px 0 0" class="list-options">
 		<tml:comment><label>Listenstil:</label></tml:comment>
-		<select name="list-style" style="width:100%" multiple="multiple"></select> 
+		<div id="list-style-ms"></div>
 	</div>
 </fieldset>
 
@@ -95,9 +81,6 @@
 			<li class="InsertTable">
 				<a href="#rtf-tab-table" data-toggle="tab">Tabelle</a>
 			</li>
-			<tml:comment><li>
-				<a href="#rtf-tab-section" data-toggle="tab">Abschnitt</a>
-			</li></tml:comment>
 		</ul>
 		<div class="tab-content" style="padding:10px;background:white;border:1px solid #ddd;porder-radius:0 4px 4px 4px;margin-top:-1px">
 			<div class="tab-pane active" id="rtf-tab-link">
@@ -109,7 +92,7 @@
 				
 				<div style="margin:10px 0" class="link-options">
 					<label>Stil:</label>
-					<select name="link-style" style="width:100%" multiple="multiple"></select> 
+					<div id="link-style-ms"></div> 
 				</div>
 
 				<div _class="btn-group">
@@ -135,7 +118,7 @@
 
 				<div style="margin:0 0 10px" class="table-options table-edit-actions">
 					<label>Stil:</label>
-					<select name="table-style" style="width:100%" multiple="multiple"></select> 
+					<div id="table-style-ms"></div> 
 				</div>
 
 				<div class="btn-group table-edit-actions">
@@ -206,7 +189,7 @@
 	
 					<div style="margin:10px 0" data-id="image-style">
 						<label>Stil:</label>
-						<select name="image-style" style="width:100%" multiple="multiple"></select> 
+						<div id="image-style-ms"></div>
 					</div>
 				</div>
 				
