--- a/OpenWGA/plugins/cm/design/tml/javascript/rtftoolpanel/image.tml
+++ b/OpenWGA/plugins/cm/design/tml/javascript/rtftoolpanel/image.tml
@@ -102,12 +102,14 @@ function imgStyleHandler(menu, ev){
 
 var menu = new Ext.menu.Menu()
 for(var i=0; i<BI.rtftoolbar.imageStyleList.length; i++){
-	var style = BI.rtftoolbar.imageStyleList[i].split("|");
-	menu.add(new Ext.menu.CheckItem({
-		text: style[0],
-		el_style: style[1],
-		handler: imgStyleHandler
-	}))
+	if(typeof(BI.rtftoolbar.imageStyleList[i])=="string"){
+		var style = BI.rtftoolbar.imageStyleList[i].split("|");
+		menu.add(new Ext.menu.CheckItem({
+			text: style[0],
+			el_style: style[1],
+			handler: imgStyleHandler
+		}))
+	}
 }
 var imgStyleMenu = menu;
 var imgStyleButton = new Ext.Button("rtf-toolbar-imageStyles-button", {
