--- a/OpenWGA/plugins/cm/design/tml/javascript/rtftoolpanel/link.tml
+++ b/OpenWGA/plugins/cm/design/tml/javascript/rtftoolpanel/link.tml
@@ -54,12 +54,14 @@ function linkStyleHandler(menu, ev){
 
 var menu = new Ext.menu.Menu()
 for(var i=0; i<BI.rtftoolbar.linkStyleList.length; i++){
-	var style = BI.rtftoolbar.linkStyleList[i].split("|");
-	menu.add(new Ext.menu.CheckItem({
-		text: style[0],
-		el_style: style[1],
-		handler: linkStyleHandler
-	}))
+	if(typeof(BI.rtftoolbar.linkStyleList[i])=="string"){
+		var style = BI.rtftoolbar.linkStyleList[i].split("|");
+		menu.add(new Ext.menu.CheckItem({
+			text: style[0],
+			el_style: style[1],
+			handler: linkStyleHandler
+		}))
+	}
 }
 var linkStyleMenu = menu;
 var linkStyleButton = new Ext.Button("rtf-toolbar-linkStyles-button", {
