00006177: Added <tml:form> around included wga/dialog-tml

--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/custom.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/custom.tml
@@ -1,6 +1,8 @@
 <tml:item name="$mc.settingsTML" var="_tml"/>
 
-<tml:include ref="{_tml}" designdb="{meta('db', 'dbkey')}" if="_tml"/>
+<tml:form id="custom-dialog-form" cssclass="form-horizontal" if="_tml">
+	<tml:include ref="{_tml}" designdb="{meta('db', 'dbkey')}"/>
+</tml:form>
 
 <tml:range unless="_tml">
 	<div class="header">
