--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/html5media/settings-html5-video.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/html5media/settings-html5-video.tml
@@ -87,7 +87,7 @@
 	<div style="margin:10px">
 		<tml:input name="{scoped:autoplay}" type="boolean" options="Automatisch starten|true" labeled="wrap" mode="{option:mode}"/>
 		<br><tml:input name="{scoped:loop}" type="boolean" options="Endlosschleife|true" labeled="wrap" mode="{option:mode}"/>
-		<br><tml:input name="{scoped:no_controls}" type="boolean" options="Controls ausblenden|true" labeled="wrap" mode="{option:mode}"/>
+		<br><tml:input name="{scoped:no_controls}" type="boolean" options="Kontroll-Elemente ausblenden|true" labeled="wrap" mode="{option:mode}"/>
 		<br><tml:input name="{scoped:muted}" type="boolean" options="Ohne Ton abspielen|true" labeled="wrap" mode="{option:mode}"/>
 		<br><tml:input name="{scoped:playsinline}" type="boolean" options="Mobile inline abspielen|true" labeled="wrap" mode="{option:mode}"/>
 	</div>
