00006188: Module "tiles": don't used fixed derivate query usage=poster for background images

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/tiles/render-tile.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/tiles/render-tile.tml
@@ -48,7 +48,7 @@
 			];
 			var image = CMM.setting("image")
 			if(image){
-				var derivate = "usage=poster"
+				var derivate = option(Packages.de.innovationgate.wgpublisher.webtml.Base.OPTION_IMAGE_DERIVATES) || "usage=poster";
 				if(_imagederivates){
 					derivate = enhanceFileDerivateQuery("width~"+WGA.format(_imagederivates, '0'))
 				}
